made btn1 functionate added the rest of the buttons

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 </table>
 <button id="addRow">addRow</button>
 <button id="calc1">calc1</button>
+<button id="calc2">calc2</button>
+<button id="calc3">calc3</button>
+<button id="calc4">calc4</button>
+<button id="calc5">calc5</button>
+<button id="calc6">calc6</button>
 <script src="index.js"></script>
 </body>
 
