--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="english">
 
 <head>
+  
   <title>Productivity</title>
   <link rel="stylesheet" href="index.css">
 </head>
@@ -25,6 +26,7 @@
 <button id="calc4">calc4</button>
 <button id="calc5">calc5</button>
 <button id="calc6">calc6</button>
+<button id="calc7">calc7</button>
 <script src="index.js"></script>
 </body>
 
