added nav-styled btns

--- a/index.html
+++ b/index.html
@@ -18,15 +18,21 @@
         <th>social</th>
         <th>handy</th>
     </tr>
+
 </table>
-<button id="addRow">addRow</button>
-<button id="calc1">calc1</button>
-<button id="calc2">calc2</button>
-<button id="calc3">calc3</button>
-<button id="calc4">calc4</button>
-<button id="calc5">calc5</button>
-<button id="calc6">calc6</button>
-<button id="calc7">calc7</button>
+<nav class="navigation">
+  <div class="btn-container nav">
+  <button id="addRow" class="button-nav addRow">addRow</button>
+  <button id="calc1" class="button-nav calc1">calc1</button>
+  <button id="calc2" class="button-nav calc2">calc2</button>
+  <button id="calc3"class="button-nav calc3">calc3</button>
+  <button id="calc4"class="button-nav calc4">calc4</button>
+  <button id="calc5"class="button-nav calc5">calc5</button>
+  <button id="calc6"class="button-nav calc6">calc6</button>
+  <button id="calc7"class="button-nav calc7">calc7</button> 
+  </div>
+</nav>
+
 <script src="index.js"></script>
 </body>
 
