just an eperiment

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+  
   <title>Productivity</title>
   <link rel="stylesheet" href="index.css">
 </head>
@@ -18,8 +19,30 @@
         <th>handy</th>
     </tr>
 </table>
-<button id="addRow">addRow</button>
-<button id="calc1">calc1</button>
+<div class="outcome-container">
+  <div class="outcome book" id="outcome-book"></div>
+  <div class="outcome code" id="outcome-code"></div>
+  <div class="outcome jjj" id="outcome-jjj"></div>
+  <div class="outcome xxx" id="outcome-xxx"></div>
+  <div class="outcome footy" id="outcome-footy"></div>
+  <div class="outcome social" id="outcome-social"></div>
+  <div class="outcome handy" id="outcome-handy"></div>
+</div>
+
+</div>
+<nav class="navigation">
+  <div class="btn-container nav">
+  <button id="addRow" class="button-nav addRow">addRow</button>
+  <button id="calc1" class="button-nav calc1">calc1</button>
+  <button id="calc2" class="button-nav calc2">calc2</button>
+  <button id="calc3"class="button-nav calc3">calc3</button>
+  <button id="calc4"class="button-nav calc4">calc4</button>
+  <button id="calc5"class="button-nav calc5">calc5</button>
+  <button id="calc6"class="button-nav calc6">calc6</button>
+  <button id="calc7"class="button-nav calc7">calc7</button> 
+  </div>
+</nav>
+
 <script src="index.js"></script>
 </body>
 
