Created btn for deleting a row

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   <button id="calc5"class="button-nav calc5">calc5</button>
   <button id="calc6"class="button-nav calc6">calc6</button>
   <button id="calc7"class="button-nav calc7">calc7</button> 
+  <button id="delete" class="delete">delete</button>
   </div>
 </nav>
 
