--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 <nav class="navigation">
   <div class="btn-container nav">
   <button id="addRow" class="button-nav addRow">addRow</button>
+  <button id="delete" class="button-nav delete">delete</button>
   <button id="calc1" class="button-nav calc1">calc1</button>
   <button id="calc2" class="button-nav calc2">calc2</button>
   <button id="calc3"class="button-nav calc3">calc3</button>
@@ -47,7 +48,6 @@
   <button id="calc5"class="button-nav calc5">calc5</button>
   <button id="calc6"class="button-nav calc6">calc6</button>
   <button id="calc7"class="button-nav calc7">calc7</button> 
-  <button id="delete" class="delete">delete</button>
   </div>
 </nav>
 
