added localStorage(everything can be saved now)

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   <div class="btn-container nav">
   <button id="addRow" class="button-nav addRow">addRow</button>
   <button id="delete" class="button-nav delete">delete</button>
+  <button id="save" class="button-nav save">save input</button>
   <button id="calc1" class="button-nav calc1">calc1</button>
   <button id="calc2" class="button-nav calc2">calc2</button>
   <button id="calc3"class="button-nav calc3">calc3</button>
