--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <table id="tablel">
     <tr id="tr1">
-        <th>book</th>
+        <th>workout</th>
         <th>code/odin</th>
         <th>jjj</th>
         <th>xxx</th>
